fix/prevent three dot menu from being hidden on overflowing from table

--- a/frontend/home/homeStyle.css
+++ b/frontend/home/homeStyle.css
@@ -70,7 +70,6 @@ table {
   border-collapse: collapse;
   background: white;
   border-radius: 12px;
-  overflow: hidden;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.03);
 }
 
